# checksum

./: .gitignore  CMakeLists.txt  HANDLEStreamBuf.cpp  HANDLEStreamBuf.hpp  README.md  checksum.cpp  conanfile.txt
